supress right click on map view

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,5 @@
 
-<div id="map" class="map">
+<div id="map" class="map" oncontextmenu="return false">
   </div>
   <div id="popup" #popup class="ol-popup">
     <a href="#" #closer class="ol-popup-closer"></a>
