change editing workflow

--- a/src/app/symbol-list/symbol-list.component.scss
+++ b/src/app/symbol-list/symbol-list.component.scss
@@ -30,7 +30,7 @@
 }
 .symbol:hover {
   background-color: #fff2e1;  //to focus the icons
- // border: 1px solid #fff2e1;
+  cursor: pointer;
 }
 .active {
   // background: #fff2e1;
