--- a/src/app/edit-meldingen/edit-meldingen.component.html
+++ b/src/app/edit-meldingen/edit-meldingen.component.html
@@ -9,7 +9,6 @@
           </button>
           </mat-card-title-group>
           <mat-divider></mat-divider>
-      </mat-card>
       <div class="form">
         <mat-form-field class="text-input">
           <input
@@ -21,20 +20,37 @@
         </mat-form-field>
         <mat-form-field class="date-input" >
           <input matInput type="date"
-                 placeholder="Datum" value="new Date().toLocaleDateString()" [(ngModel)]="this.date"  />
+                 placeholder="Datum" [(ngModel)]="this.date"  />
         </mat-form-field>
-        <mat-radio-group [(ngModel)]="this.isGoodExample" #radioGroup="matRadioGroup" classe="radio-input">
-          <mat-radio-button value="true">ja</mat-radio-button>
-          <mat-radio-button value="false">ne</mat-radio-button>
-        </mat-radio-group>
-        <mat-select [(ngModel)]="this.priority"  (multiple) = 'false'  class="select-input" *ngIf="this.isGoodExample === 'false'">
-          <mat-option *ngFor="let priority of priorities" [value]="priority">
-            {{priority}}
-          </mat-option>
-        </mat-select>
-        <input type="file" class="file-input"
-       accept="image/*"
-       (change)="onFileSelected($event)">
+        <div class="radio-input">
+          <mat-radio-group [(ngModel)]="this.isGoodExample" #radioGroup="matRadioGroup" >
+            <mat-label>
+              <mat-radio-button value="true"></mat-radio-button>
+              <mat-icon>thumb_up</mat-icon>
+            </mat-label>
+            <mat-label>
+              <mat-radio-button value="false"></mat-radio-button>
+              <mat-icon>thumb_down</mat-icon>
+          </mat-label>
+          </mat-radio-group>
+      </div>
+      <div class="select-input" *ngIf="this.isGoodExample === 'false'">
+        <mat-label>Prioriteit:
+          <mat-select [(ngModel)]="this.priority"  (multiple) = 'false'>
+            <mat-option *ngFor="let priority of priorities" [value]="priority">
+              {{priority}}
+            </mat-option>
+          </mat-select>
+        </mat-label>
+      </div>
+      <div class="file-input">
+        <div class="file-input-label">
+          <mat-label>Foto:</mat-label>
+        </div>
+        <input type="file"
+        accept="image/*"
+        (change)="onFileSelected($event)" />
+      </div>
        <mat-form-field class="text-input" *ngIf="this.imageFile !== null">
         <input
           matInput
@@ -43,16 +59,10 @@
         />
         <mat-placeholder class="textPlaceholder">Fotobeschrijving</mat-placeholder>
       </mat-form-field>
+      <div class="submit-button">
+        <button mat-flat-button color="primary" type="submit" (click)="this.submitDialog()" [disabled]="this.isButtonDisabled()">Ok</button>
       </div>
-      <div class="submit">
-        <button
-        class="submit-button"
-        mat-stroked-button
-        (click)="this.submitDialog()"
-        [disabled]="this.isButtonDisabled()"
-      >
-        ok
-      </button>
     </div>
+  </mat-card>
   </div>
 </div>
