--- a/src/app/edit-meldingen/edit-meldingen.component.html
+++ b/src/app/edit-meldingen/edit-meldingen.component.html
@@ -77,7 +77,7 @@
         </mat-form-field>
       </div>
       <div class="submit-button">
-        <button mat-flat-button color="primary" type="submit" (click)="this.submitDialog()" [disabled]="this.isButtonDisabled()" [ngStyle]="{'cursor': this.isButtonDisabled() ? 'not-allowed' : 'auto'}">Ok</button>
+        <button mat-flat-button color="primary" type="submit" (click)="this.submitDialog()" [disabled]="this.isButtonDisabled()" [ngStyle]="{'cursor': this.isButtonDisabled() ? 'not-allowed' : 'pointer'}">Ok</button>
       </div>
     </div>
   </mat-card>
