--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -53,11 +53,14 @@
                           </button> -->
 
                          <!-- the identify button to the layer panel needed for WMS layers -->
-                          <button mat-icon-button matTooltip="Element identificeren" aria-label="Identify elements in the layer"
-                                  (click)="onIdentifyLayerClick($event, layer, group.groupName)"
-                                  [ngClass]="layer.onIdentify ? 'activeAction': 'normal'">
-                            <mat-icon>info_outline</mat-icon>
-                          </button>
+                         <div *ngIf="isLayerQueryable(layer.layerName)">
+                            <button mat-icon-button matTooltip="Element identificeren" aria-label="Identify elements in the layer"
+                                    (click)="onIdentifyLayerClick($event, layer, group.groupName)"
+                                    [ngClass]="layer.onIdentify ? 'activeAction': 'normal'"
+                                    >
+                              <mat-icon>info_outline</mat-icon>
+                            </button>
+                          </div>
                            <span class="spacer"></span>
                            <button *ngIf="layer.removable"  mat-icon-button matTooltip="Layer loeschen" aria-label ="Remove layer"
                                    (click)="onRemoveLayerClick($event,layer,group.groupName)">
