init case study enschede

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -26,4 +26,4 @@
                     [featureLayer] = "featureLayerForm"> <!--[questions]="formQuestions" -->  <!-- from parent to Child) -->
 </app-dynamic-form>
 <!--custiom meldingen dialog-->
-<app-edit-meldingen (formSubmitted)="getFormData($event)"></app-edit-meldingen>
+<app-edit-reporting (formSubmitted)="getFormData($event)"></app-edit-reporting>
