translate from dutch to english

--- a/src/app/editing-toolbar/editing-toolbar.component.html
+++ b/src/app/editing-toolbar/editing-toolbar.component.html
@@ -7,20 +7,20 @@
  <div #editToolbar>
     <mat-toolbar>
       <button   *ngIf= " (layerTypeEdit$ == 'Point' || layerTypeEdit$ == 'Multi'|| layerTypeEdit$ == 'MultiPoint') " mat-icon-button
-                (click)="drawingShapes('Point')" matTooltip="Begin met bewerker (de laag)" aria-label= "Add point/marker" [ngClass]="actionActive['Point'] ? 'active': 'normal'">
+                (click)="drawingShapes('Point')" matTooltip="Start editing" aria-label= "Add point/marker" [ngClass]="actionActive['Point'] ? 'active': 'normal'">
         <mat-icon>add_location</mat-icon>
       </button>
 
       <button mat-icon-button *ngIf="(layerTypeEdit$ == 'Line' || layerTypeEdit$ =='Multi' || layerTypeEdit$ == 'Polygon'|| layerTypeEdit$ == 'MultiPolygon'|| layerTypeEdit$ == 'MultiPolygonZ') "
-              (click)="drawingShapes('LineString')" matTooltip="Lijn/lijnstring toevoegen" aria-label="Add line" [ngClass]="actionActive['LineString'] ? 'active': 'normal'">
+              (click)="drawingShapes('LineString')" matTooltip="Add Line/Linestring" aria-label="Add line" [ngClass]="actionActive['LineString'] ? 'active': 'normal'">
         <mat-icon    svgIcon="add_line"></mat-icon>
       </button>
       <button *ngIf="(layerTypeEdit$ == 'Polygon' || layerTypeEdit$ == 'Multi'|| layerTypeEdit$ == 'MultiPolygon'|| layerTypeEdit$ == 'MultiPolygonZ') " mat-icon-button
-              (click)="drawingShapes('Polygon')" matTooltip="Polygoon (gebied) toevoegen" aria-label="Add polygon" [ngClass]="actionActive['Polygon'] ? 'active': 'normal'">
+              (click)="drawingShapes('Polygon')" matTooltip="add Polygon (Area)" aria-label="Add polygon" [ngClass]="actionActive['Polygon'] ? 'active': 'normal'">
         <mat-icon svgIcon="add_poly"></mat-icon>
       </button>
          <button mat-icon-button (click)="startEditAction('ModifyBox');showSymbolPanel(false);"
-                 matTooltip="Element verplaatsen" aria-label="Select element(s) to move"
+                 matTooltip="Move element" aria-label="Select element(s) to move"
               [ngClass]="actionActive['ModifyBox'] ? 'active': 'normal'" >
         <mat-icon svgIcon="selectBoxFeature"></mat-icon>
       </button>
@@ -50,18 +50,18 @@
         <mat-icon>rotate_right</mat-icon>
       </button> -->
       <button mat-icon-button (click)="startEditAction('MeasureLine');showSymbolPanel(false)"
-              matTooltip="Meet afstand" aria-label= "Measure lineal distance"
+              matTooltip="Measure distance" aria-label= "Measure lineal distance"
               [ngClass]="actionActive['MeasureLine'] ? 'active': 'normal'" >
         <mat-icon svgIcon="measureLine"></mat-icon>
       </button>
       <button mat-icon-button (click)="startEditAction('MeasureArea');showSymbolPanel(false)"
-              matTooltip="Meet gebied" aria-label="Measure areal distance"
+              matTooltip="Measure area" aria-label="Measure area"
               [ngClass]="actionActive['MeasureArea'] ? 'active': 'normal'" >
         <mat-icon svgIcon="measureArea"></mat-icon>
       </button>
 
       <button mat-icon-button (click)="startEditAction('Delete'); showSymbolPanel(false)"
-              aria-label="delete a element" matTooltip="Element verwijderen"
+              aria-label="delete a element" matTooltip="Delete element"
               [ngClass]="actionActive['Delete'] ? 'active': 'normal'">
         <mat-icon>delete_forever</mat-icon>
       </button>
@@ -73,19 +73,19 @@
               [ngClass]="actionActive['Search'] ? 'active': 'normal'">
         <mat-icon>search</mat-icon>
       </button> -->
-      <button mat-icon-button aria-label="UndoLastEdit" (click)="startEditAction('Undo');" matTooltip="Ongedaan maken">
+      <button mat-icon-button aria-label="Revert last edit" (click)="startEditAction('Undo');" matTooltip="Revert last edit">
         <mat-icon>undo</mat-icon>
       </button>
-      <button mat-icon-button (click)="showSymbolPanel(true)" matTooltip="Lijst met symbolen openen" aria-label="Open symbol list"
+      <button mat-icon-button (click)="showSymbolPanel(true)" matTooltip="Open list of symbols" aria-label="Open list of symbols"
               [ngClass]="actionActive['showSymbols'] ? 'active': 'normal'">
         <mat-icon>category</mat-icon>
       </button>
-      <button [disabled]="stopSave" mat-icon-button (click)="saveLayer()"  aria-label="Save edits into the active layer"
-      matTooltip ="Sla wijzigingen op in actieve laag">
+      <button [disabled]="stopSave" mat-icon-button (click)="saveLayer()"  aria-label="Save changes in active layer"
+      matTooltip ="Save changes in active layer">
         <mat-icon>save_alt</mat-icon>
       </button>
       <button  [disabled]="stopSaveAll" mat-icon-button (click)="saveAllLayer()"  aria-label="Save all edits in all layers"
-               matTooltip ="Sla alle veranderingen op">
+               matTooltip ="Save all changes in all layers">
         <mat-icon>save</mat-icon>
       </button>
 
