--- a/src/app/symbol-list/symbol-list.component.html
+++ b/src/app/symbol-list/symbol-list.component.html
@@ -4,9 +4,9 @@
 <mat-card class="symbol-list"  #symListCard>
   <mat-card-title-group>
     <mat-card-title class="panelTitle" *ngIf= "getHeader()" >{{getHeader()}}</mat-card-title>
-    <mat-card-title class="panelTitle" *ngIf= "!getHeader()">Symbolen</mat-card-title>
+    <mat-card-title class="panelTitle" *ngIf= "!getHeader()">Symbols</mat-card-title>
     <button mat-flat-button (click)="showSymbolList({visible: false}, true)" >
-      <mat-icon class="matCloseWrapper" matTooltip="sluiten">close</mat-icon>
+      <mat-icon class="matCloseWrapper" matTooltip="close">close</mat-icon>
     </button>
 
   </mat-card-title-group>
