--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,12 +14,12 @@
           <span>Open project</span>
         </button> -->
         <button mat-menu-item disabled (click) = "editSettings()">
-          <mat-icon>settings </mat-icon>
-          <span>Instellingen</span>
+          <mat-icon>settings</mat-icon>
+          <span>settings</span>
         </button>
         <button mat-menu-item (click)="showInfo()">
           <mat-icon>info </mat-icon>
-          <span>Over</span>
+          <span>About</span>
         </button>
       </mat-menu>
       <span class="title">&nbsp;OGITO </span>
@@ -27,8 +27,8 @@
       <span class = "userNickName" *ngIf="auth.userProfile$ | async as profile">
       <code>{{ profile["nickname"] }}</code>
       </span> <pre>  </pre>
-      <button mat-button (click)="auth.login()" *ngIf="!auth.loggedIn"> Log In</button>
-      <button mat-button (click)="auth.logout()" *ngIf="auth.loggedIn"> Log uit</button>
+      <button mat-button (click)="auth.login()" *ngIf="!auth.loggedIn"> Log in</button>
+      <button mat-button (click)="auth.logout()" *ngIf="auth.loggedIn"> Log out</button>
       <button mat-icon-button (click)="exitToApp()">
           <mat-icon> exit_to_app</mat-icon>
       </button>
