--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -6,7 +6,7 @@
       (panstart)="onPanStart($event)" (panmove)="onPan($event)" cdkDragBoundary=".mapBoundary" cdkDrag >  -->
   <mat-card class = 'layerPanelCard'>
     <mat-card-title-group>
-      <mat-card-title class="panelTitle">Kaartlagen</mat-card-title>
+      <mat-card-title class="panelTitle">Layers</mat-card-title>
       <button mat-flat-button   (click)="closeLayerPanel(false)" >
         <mat-icon class="matCloseWrapper" aria-label="Close layer Panel">close</mat-icon>
       </button>
@@ -54,7 +54,7 @@
 
                          <!-- the identify button to the layer panel needed for WMS layers -->
                          <div *ngIf="isLayerQueryable(layer.layerName)">
-                            <button mat-icon-button matTooltip="Element identificeren" aria-label="Identify elements in the layer"
+                            <button mat-icon-button matTooltip="Query element" aria-label="Identify elements in the layer"
                                     (click)="onIdentifyLayerClick($event, layer, group.groupName)"
                                     [ngClass]="layer.onIdentify ? 'activeAction': 'normal'"
                                     >
@@ -62,7 +62,7 @@
                             </button>
                           </div>
                            <span class="spacer"></span>
-                           <button *ngIf="layer.removable"  mat-icon-button matTooltip="Layer loeschen" aria-label ="Remove layer"
+                           <button *ngIf="layer.removable"  mat-icon-button matTooltip="Remove layer" aria-label ="Remove layer"
                                    (click)="onRemoveLayerClick($event,layer,group.groupName)">
                              <mat-icon>delete</mat-icon>
                            </button>
