--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -9,13 +9,13 @@
   </mat-card-title-group> -->
   <mat-divider class = "toolbarDivider"></mat-divider>  <!-- to provide a space to drag -->
   <mat-toolbar color="primary">
-    <button matTooltip="Zoom naar op volledig oppervlak" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
+    <button matTooltip="Zoom to full extent" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
       <mat-icon>home</mat-icon>
     </button>
-    <button mat-icon-button aria-labelledby="Add a sketch layer" matTooltip="Omschakelen van volledig scherm" (click)="toggleFullScreen()" >
+    <button mat-icon-button aria-labelledby="Toggle fullscreen mode" matTooltip="Toggle fullscreen mode" (click)="toggleFullScreen()" >
       <mat-icon class="svgIconToolbar" svgIcon="fullscreen"></mat-icon>
     </button>
-    <button mat-icon-button aria-labelledby="Show list of layers" matTooltip="Toon kaartoverzicht" (click)="openLayerPanel()" >
+    <button mat-icon-button aria-labelledby="Show list of layers" matTooltip="Show map overview" (click)="openLayerPanel()" >
       <mat-icon class="svgIconToolbar">layers</mat-icon>
     </button>
     <!--<button mat-icon-button aria-labelledby="Edit layers" matTooltip="Edit layers" (click)="layerEditingChange()">
