--- a/src/app/symbol-list/symbol-list.component.scss
+++ b/src/app/symbol-list/symbol-list.component.scss
@@ -25,9 +25,12 @@
 .canvasSymbol {
  // background-color:  #fff2e1;
   // border: 1px solid #fff2e1;
-  width: 2vw;  // responsive to the size of the VW
-  height: 1vw;
+  width: 3vw;  // responsive to the size of the VW
+  height: 1.5vw;
 }
+.symbolLabel {
+  font-size: 0.7vw;
+ }
 .symbol:hover {
   background-color: #fff2e1;  //to focus the icons
   cursor: pointer;
