--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -9,7 +9,7 @@
   </mat-card-title-group> -->
   <mat-divider class = "toolbarDivider"></mat-divider>  <!-- to provide a space to drag -->
   <mat-toolbar color="primary">
-    <button matTooltip="Zoom to full extent" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
+    <button matTooltip="Zoom to initial extent" aria-labelledby="Zoom to the study area" mat-icon-button (click)="zoomHome()">
       <mat-icon>home</mat-icon>
     </button>
     <button mat-icon-button aria-labelledby="Toggle fullscreen mode" matTooltip="Toggle fullscreen mode" (click)="toggleFullScreen()" >
