--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -3,7 +3,7 @@
 cdkDrag cdkDragBoundary=".app-content" >
  <mat-card>
       <mat-card-title-group>
-        <mat-card-title>Beschrijving</mat-card-title>
+        <mat-card-title>Description</mat-card-title>
         <!--<button mat-flat-button (click)="closeForm()" class="matCloseWrapper">
           <mat-icon >close</mat-icon>
         </button> -->
