--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -7,9 +7,7 @@
   flex-direction: column;
   position: absolute;
   border-radius: 3px;
-  background-color: #ad1457;   //same that primary color
-  // test for gecco
-  // background-color: blue;
+  background-color: #ad1457;
   min-width: 40px;
 }
 
