--- a/src/myTheme.scss
+++ b/src/myTheme.scss
@@ -1,7 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 @import '@angular/material/theming';
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 $myOgito-app-primary: mat.define-palette(mat.$pink-palette,800,100,900);
@@ -10,4 +19,4 @@ $myOgito-app-primary: mat.define-palette(mat.$pink-palette,800,100,900);
 
 $myOgito-app-accent: mat.define-palette(mat.$amber-palette,50);
 $myOgito-app-theme:mat.define-light-theme($myOgito-app-primary,$myOgito-app-accent);
-@include mat.all-component-themes($myOgito-app-theme);
+@include mat.all-legacy-component-themes($myOgito-app-theme);
