--- a/src/app/editing-toolbar/editing-toolbar.component.html
+++ b/src/app/editing-toolbar/editing-toolbar.component.html
@@ -31,7 +31,7 @@
         <mat-icon svgIcon="ratingQuietArea"></mat-icon>
       </button>
       <button  *ngIf="(layerTypeRateMeasures$)" mat-icon-button (click)="startEditAction('RankingMeasures');showSymbolPanel(false);"
-               matTooltip="Prioritiere Massnahmen" aria-label= "Rate measures action-plan"
+               matTooltip="Rate Measures" aria-label= "Rate measures"
               [ngClass]="actionActive['RankingMeasures'] ? 'active': 'normal'" >
         <mat-icon svgIcon="ratingActionPlan"></mat-icon>
       </button>
