adjust styling of rating dialog

--- a/src/app/map/dialog-rating-measure-dialog.html
+++ b/src/app/map/dialog-rating-measure-dialog.html
@@ -1,11 +1,12 @@
 <h2 mat-dialog-title>Bewertung {{data.layerNameDialog}}</h2>
-<mat-dialog-content>Enter your rating for the measures:
+<mat-dialog-content><div class="ratingHint">Enter your rating for the measures:</div>
  <!-- enter here a container, prepare the data for an array and double loop-->
   <div class="star-rating-container star-rating-animation" fxLayout="row" fxLayoutAlign="start center" >
     <div [formGroup]="formGroup">
     <div *ngFor="let field of data.fieldNames" >
 
       <label >{{getLabel(field)}} (1-5): </label>
+      <br/>
       <mat-slider  color = 'primary' [formControlName]="field" [max]= 5
                    [min]=1 [thumbLabel]=true  [value]="field.min"
                    (change) = "showQuestionValue(field, $event.value)">{{field.value}}</mat-slider>
