fix default label for description

--- a/src/app/edit-reporting/edit-reporting.component.html
+++ b/src/app/edit-reporting/edit-reporting.component.html
@@ -17,7 +17,7 @@
             type="text"
             [(ngModel)]="this.description"
           />
-          <mat-placeholder class="textPlaceholder">{{this.getLabel('text', 'Date')}}</mat-placeholder>
+          <mat-placeholder class="textPlaceholder">{{this.getLabel('text', 'Text')}}</mat-placeholder>
         </mat-form-field>
       </div>
       <div class="date-input">
